# libSV

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile.am  README.md  build.sh  configure.ac
src/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Makefile.am  example.cpp  main.cpp
